# arq-backup-tui

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  HANDOFF.md  Makefile  README.md  arq-tui.py  pyproject.toml
.github/workflows/: health-check.yml  integration-nightly.yml  test.yml
.secrets/: README.md  dest_password.example  sftp.json.example
arq_reader/: __init__.py  __main__.py  arq5_binary.py  arq5_keyset.py  arq5_pack.py  arq5_restore.py  cli.py  decrypt.py  pack.py  parse.py  restore.py  restore_verify.py  snapshot_diff.py
arq_tui/: __init__.py  __main__.py  app.py  arq_app.py  backend_open.py  cli.py  console_commands.py  macos_progress.py  multi_destination.py  notifications.py  runs.py  scheduling.py  secrets_setup.py  state.py  subprocess_workers.py  theming.css  workers.py
arq_tui/screens/: __init__.py  _overlay.py  backup_run.py  backup_sets.py  help.py  home.py  maintenance.py  plan_wizard.py  record_browser.py  restore_run.py  runs_monitor.py  scheduling.py  summary.py  validate_run.py
arq_tui/widgets/: __init__.py  confirm_modal.py  console.py  destination_modal.py  password_modal.py  progress_panel.py  restore_target_modal.py  sidebar.py  source_picker.py
arq_validator/: __init__.py  __main__.py  audit_drip.py  backend.py  cli.py  compatibility.py  constants.py  crypto.py  debug_logging.py  events.py  fingerprint.py  fingerprint_cli.py  incremental_audit.py  layout.py  machine_info.py  record_validator.py  runner.py  sftp.py  sidecar.py  strict.py  tiers.py
arq_writer/: __init__.py  __main__.py  acl.py  arq_chunker_params.py  backup.py  backuprecord.py  buzhash_re_cli.py  chunker.py  chunker_oracle.py  cli.py  constants.py  crypto_write.py  dedup.py  default_excludes.py  disk_estimator.py  dry_run.py  exclusions.py  json_configs.py  lz4_block.py  macho_buzhash_finder.py  macos_snapshot.py  pack_builder.py  prior_tree.py  retention.py  serialize.py  types.py  xattrs.py
docs/: APFS-SNAPSHOTS.md  ARQ-APP-MIRROR.md  ARQ7-GUI-INTEROP-2026-05-24.md  C1-MACHO-RE-PLAN.md  COMPAT-SFTP-TESTING.md  COMPAT-VERIFICATION.md  COMPATIBILITY.md  COVERAGE.md  GUI-PARITY.md  INCIDENTS.md  MECHANISM.md  N2-arqagent-schema.sql  N3-FILECHANGELASTS-RE.md  PLAN-cli-tui-split.md  PLAN-tui.md  REAL-DATA-DISCOVERIES.md  RESEARCH-backup-creation-feasibility.md  RESEARCH-format-extensions.md  RESEARCH-shared-arq-config-feasibility.md  SESSION-2026-05-24.md  SFTP-THROTTLE-MEASUREMENT.md  STRATEGY-K-DEEP-DIVE.md  STRATEGY-K3-CORRELATION.md  UNENCRYPTED-FORMAT-RE.md  UNICODE.md  WEEKEND-HUMAN-INTERVENTION-PLAN.md  XATTR-BULK-PROBE.md
docs/api/: index.md
docs/arq-compat/: MATRIX.md  README.md
docs/arq-compat/baselines/: 7.44.1.fp.json  server-db-schema-7.44.1.json
docs/arq-compat/runs/: 7.44.1_2026-05-24.md  7.44.1_2026-05-25.md
scripts/: analyze_v4_trailing_block.py  build_api_docs.py  build_changelog.py  capture_arqapp_fixture.py  check_doc_links.py  install-p4-sync-hooks.sh  k4_2_residual_analysis.py  k4_subtree_sweep.py  measure_sftp_throttle.py  n2_extract_arqagent_schema.py  n3_locate_filechange_symbols.py  probe_tree_v4_block.py  probe_xattr_blob.py  probe_xattr_blob_bulk.py  run_coverage.py  sync-main-to-p4.sh  v1_arqagent_fingerprint.py
scripts/arq_compat/: com.arqcompat.runner.plist.example  run.py  scenarios.py
scripts/arq_restore_v4/: 0001-arq7-node-read-v4-trailing-block.patch  README.md  UPSTREAM-PR.md  build.sh  verify.py  verify_fresh_walk.py
tests/: fixtures.py  fixtures_unicode.py  test_acl_resource_fork_policy.py  test_aclblobloc_reader_path.py  test_apfs_clone_handling.py  test_arq5_binary.py  test_arq5_leftovers_coexist.py  test_arq5_pack.py  test_arq5_restore.py  test_arq7_compatibility.py  test_arq_app_tree_version_pin.py  test_arq_chunker_params.py  test_arq_compat_scrub.py  test_audit_drip.py  test_audit_progress_eta.py  test_b1_b2_partial_pack_recovery.py  test_backup_pause_resume.py  test_backup_restore_backup_idempotency.py  test_backup_tree_version_wireup.py  test_backuprecord_edge_fields.py  test_backuprecord_errors.py  test_backuprecord_numbering.py  test_backuprecord_version_edge_cases.py  test_batch_a.py  test_blob_id_type_handling.py  test_c1_c2_sqlite_reference_graph.py  test_c_s1_strategy_c_scale.py  test_cancel_pause_precision.py  test_changelog_builder.py  test_chunker.py  test_chunker_edge_cases.py  test_chunker_oracle.py  test_chunker_version_handling.py  test_concurrent_backup_safety.py  test_config_value_level.py  test_creationdate_precision.py  test_crypto.py  test_crypto_properties.py  test_d1_d2_binary_plist_roundtrip.py  test_d4_placeholder_path_non_existence.py  (+154 more)
tests/fixtures/arqapp_destinations/: .gitignore  README.md
tests/integration/: __init__.py  _creds.py  test_arq_real_destination.py  test_arq_real_destination_deep.py  test_arqapp_sftp_compat.py  test_pack_and_record_realdata.py
