[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arq-backup-tui"
version = "0.1.0"
description = "Independent validator and TUI foundation for Arq 7 backups."
readme = { content-type = "text/plain", text = "Independent Arq 7 backup validator." }
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["arq", "backup", "validator", "tui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: System :: Archiving :: Backup",
]

[project.optional-dependencies]
# Test suite uses only stdlib + the package itself, so this is empty
# by design. The block exists so 'pip install -e ".[test]"' is a
# valid no-op invocation that CI can rely on.
test = []

# TUI frontend. Only the arq_tui/ package depends on textual; the
# library packages stay stdlib-only so embedders aren't pulled into
# the rich + textual dep tree.
tui = ["textual>=0.50"]

# Optional keyring integration for SFTP / encryption-password
# storage. Off by default; users opt in if they prefer
# OS-keyring-backed credentials over the in-memory session cache.
tui-keyring = ["textual>=0.50", "keyring>=24"]

[project.scripts]
arq-validator = "arq_validator.cli:main"
arq-fingerprint = "arq_validator.fingerprint_cli:main"
arq-backup = "arq_writer.cli:main"
arq-reader = "arq_reader.cli:main"
arq-buzhash-find = "arq_writer.buzhash_re_cli:main"
arq-tui = "arq_tui.__main__:main"

[tool.setuptools]
packages = [
    "arq_validator", "arq_writer", "arq_reader",
    "arq_tui", "arq_tui.screens", "arq_tui.widgets",
]

[tool.setuptools.package-data]
arq_validator = ["py.typed"]
arq_tui = ["theming.css"]

[tool.pyright]
# pyright runs on CI in basic mode — strict mode would chase
# every `# type: ignore[attr-defined]` we sprinkle for cross-
# module dynamic attribute access. Basic catches the high-value
# bugs (undefined names, missing imports, accidentally-broken
# call shapes) without forcing every callable to carry a
# complete signature.
include = [
    "arq_writer", "arq_reader", "arq_validator", "arq_tui",
]
exclude = [
    "**/__pycache__", "tests", "scripts", "docs",
    # Legacy compatibility module — keeps Arq 5 binary parser +
    # restorer working alongside the Arq 7 path.
    "arq_reader/arq5_*.py",
]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
# Allow `**payload` callbacks + dataclasses with optional fields
# without forcing exhaustive Optional handling on every access.
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"
reportOptionalCall = "none"
# `**common` dict-spread into dataclass __init__ produces
# `int | str | BlobLoc | List[BlobLoc] | None` per arg —
# correct at runtime, but pyright can't narrow per-key. Same
# story for getattr() returns + dynamic dispatch on Tree v3 vs v4.
# Demote to warning so the genuinely-broken stuff still fails.
reportArgumentType = "warning"
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportAssignmentType = "warning"
reportReturnType = "warning"
reportRedeclaration = "warning"
reportInvalidTypeForm = "warning"
